public/stylesheets/stylesheet.css
/* ... */
.wrapper .content-home .banner-area .left .event-tick span {
	font-size: 12px;
}

.wrapper .content.home .banner-area .right {
	float: left;
	width: 376px;
}

.wrapper .content-home .banner-area .right h2 {
	font-size: 22px;
	font-weight: bold;
	color: #FFFFFF;
	text-shadow: #132a13 1px 1px 1px;
	letter-spacing: 0px;
}

.wrapper .content-home .banner-area .right .feature-list {
	margin-top: 10px;	
}

.wrapper .content-home .banner-area .right .feature-list li {
	padding: 5px 0px 10px 0px;
	margin-left: 35px;
}

.wrapper .content-home .banner-area .right .feature-list li#connect-with-others h3 {
	background-image: url("../images/group-ppl-white.png");
	background-repeat: no-repeat;
	background-position: 530px;
	height: 21px;
}

.wrapper .content-home .banner-area .right .feature-list li#manage-events h3 {
	background-image: url("../images/tags-white.png");
	background-repeat: no-repeat;
	background-position: 530px;
	height: 25px;
}

.wrapper .content-home .banner-area .right .feature-list h3 {
	font-size: 14px;
	font-weight: bold;
	color: #C8EAC7;
	letter-spacing: 0px;
	text-indent: 45px;
	line-height: 30px;
}

.wrapper .content-home .banner-area .right .feature-list p {
	font-size: 12px;
	padding: 7px 0px;
	font-family: Arial;
}

.wrapper .content-home .banner-area .right .create-event-button {
	margin-top: 19px;
	margin-right: 45px;
	float: right;
}

.wrapper .content-home .content-wrapper { }

.wrapper .content-home .content-wrapper .left_column {
	width: 260px;
	margin-right: 30px;
	float: left;
}

.wrapper .content-home .content-wrapper .right_column {
	width: 650px;
	float: left;
}



.fleft { float: left; }
.fright { float: right; }

.clear-fix {
	clear: both;
	height: 0px;
	max-height: 0px;
	line-height: 0px;
	display: block;
	overflow: hidden;
}

.form {
	background: #F6F6F6;
	border-color: #E2E2E2 #E2E2E2 #C9C9C9;
	border-style: solid;
	border-width: 1px;
	padding: 15px;
}

.form p {
	padding: 5px 0px;
}

.form p label {
	display: inline-block;
	font-weight: bold;
	text-transform: uppercase;
}

.form p input, .form p textarea {
	display: block;
}

.form p input.check {
	display: inline-block;
}

.form p span.required {
	display: inline-block;
	color: #FF0000;
}

.form p.error {
	color: #FF0000;
}

p.small {
	font-size: 11px;
	font-weight: normal;
}

input[type="text"],
input[type="password"],
textarea
{
    padding: 6px 5px;
    border: 1px solid #e2e2e2;
    border-bottom: 1px solid #c9c9c9;
    
    color: #515151;
    font-size: 12px;
    font-family: Tahoma, Arial, sans-serif;
    
    width: 65%;
}


.search-form {
	margin-bottom: 5px;
	padding: 15px 15px;
	background: #f7f7f7;
	-webkit-border-radius: 5px;
	-moz-border-radius: 5px;
	border-radius: 5px;
}

.search-form label,
.search-form input {
	display: inline;
}

.search-form label {
	font-size: 12px;
	font-weight: bold;
	text-transform: uppercase;
	color: #5b5b5b;
}

.wrapper .content-home .content-wrapper .search-form {
	margin-bottom: 15px;
}

.wrapper .content-home .content-wrapper .search-form input[type="text"] {
	width: 218px;
	padding: 3px 2px;
}

.wrapper .content-two-columns .column-wrapper .left-column .search-form input[type="text"] {
	width: 205px;
	padding: 3px 2px;
}

.wrapper .content-home .content-wrapper table,
.wrapper .content-home .content-wrapper .popular-events {
	padding: 1px 1px;
	border: 1px solid #e6e6e6;
	color: #5b5b5b;
	width: 100%;
}

.wrapper .content-home .content-wrapper table tr th,
.wrapper .content-home .content-wrapper .popular-events tr th {
	padding: 10px 15px;
	background: #f7f7f7;
	color: #5b5b5b;
	font-size: 12px;
	font-weight: bold;
	border-bottom: 1px solid #e6e6e6;
}

.wrapper .content-home .content-wrapper table tr td,
.wrapper .content-home .content-wrapper .popular-events tr td {
	padding: 10px 15px;
}

.wrapper .content-home .content-wrapper table tr td.message {
	font-size: 11px;
	font-weight: bold;
}

.wrapper .content-home .content-wrapper .popular-events tr td.attend {
	text-transform: uppercase;
	text-align: right;
	width: 20%;
}

.wrapper .content-home .content-wrapper .popular-events tr td.date {
	width: 25%;
	text-align: center;
	font-size: 11px;
}

.wrapper .content-home .content-wrapper .popular-events tr td.title {
	width: 55%;
}

.wrapper .content-home .content-wrapper .popular-events tr td.title div.location {
	font-size: 11px;
}

.wrapper .content-home .content-wrapper .events tr td .location, .time, .groups {
	font-size: 11px;
}

.wrapper .content-home .content-wrapper .events,
.wrapper .content-home .content-wrapper .group-invites {
	margin-bottom: 15px;
}

.wrapper .content-home .content-wrapper .events tr td .groups li {
	margin-left: 15px;
	list-style: square;
}

.wrapper .content-home .content-wrapper .events tr td .groups li.title {
	list-style: none;
	margin-left: 0px;
}

/* .wrapper .content-home .content-wrapper .group-activity {
	padding: 5px 5px;
	border: 1px solid #e6e6e6;
	color: #5b5b5b;
	width: 100%;
}

.wrapper .content-home .content-wrapper .group-activity li {
	border-bottom: 1px solid #e6e6e6;
	padding: 15px 10px;
} */

.wrapper .content-home .content-wrapper .group-activity tr td,
.wrapper .content-home .content-wrapper .group-invites tr td {
	border-bottom: 1px solid #e6e6e6;
}

.wrapper .content-home .content-wrapper .group-activity tr:last-child td,
.wrapper .content-home .content-wrapper .group-invites tr td {
	border-bottom: none;
}

.wrapper .content-home .content-wrapper .group-activity tr td .icon {
	float: left;
	width: 40px;
	height: 40px;
	overflow: hidden;
	
	padding-right: 10px;
}

.wrapper .content-home .content-wrapper .group-activity tr td .info {
	float: left;
	width: 175px;
}

.wrapper .content-home .content-wrapper .group-activity tr td .info h2,
.wrapper .content-home .content-wrapper .group-invites tr td h2 {
	font-size: 15px;
	padding: 0px 0px 3px 0px;
}
/* ... */

